--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "polished": "^4.1.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-feather": "^2.0.9",
     "react-modal": "^3.14.3",
     "react-router-dom": "^5.2.0",
@@ -42,6 +42,10 @@
   },
   "devDependencies": {
     "@types/react-modal": "^3.12.1",
-    "@types/react-router-dom": "^5.1.8"
+    "@types/react-router-dom": "^5.1.7"
+  },  "eslintConfig": {
+    "extends": [
+      "react-app"
+    ]
   }
 }
